Fixed spacing issue.

--- a/source/stylesheets/remark/slides.css.sass
+++ b/source/stylesheets/remark/slides.css.sass
@@ -28,6 +28,9 @@ code
 /* Two-column layout */
 .remark-slide-content
 	@include outer-container
+	h1,h2,h3,h4,h5,h6
+		&:first-child
+			margin-top: 0
 .left-column	
 	height: 92%
 	@include span-columns(3)
